--- a/stage/sass/inc/pages/home.scss
+++ b/stage/sass/inc/pages/home.scss
@@ -126,6 +126,13 @@
             margin-bottom: 30px;
             position: relative;
 
+            @media (max-width: 1032px) {
+                flex-direction: column;
+                text-align: center;
+                margin-bottom: 0px;
+
+            }
+
             .counter-number {
                 display: inline-block;
                 min-width: 50px;
@@ -149,6 +156,16 @@
 
             h6 {
                 display: inline-block;
+            }
+        }
+    }
+
+    .services {
+        .title {
+            margin: 30px 0px;
+
+            @media (max-width: 1032px) {
+                text-align: center;
             }
         }
     }
